--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,11 +82,11 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme by <a href="http://stepday.me">Hux</a> |
+                    Theme by <a href="http://github.com/stepday">stepday</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=stepday&repo=stepday.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
